[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ssv"
version = "0.1.0"
description = "SSV Taproot vault toolkit (lean): tapscript build, PSBT finalize"
requires-python = ">=3.9"
dependencies = [
  "python-bitcointx",
]

[project.scripts]
ssv = "ssv.cli:main"
